--- a/index.html
+++ b/index.html
@@ -73,6 +73,63 @@
           <button class="btn-primary">explore More</button>
         </div>
       </section>
+
+      <!-- feaures section start -->
+      <section class="features display-flex">
+        <div>
+          <h3 id="feature-section-title" class="section-title">
+            Features you will <br />
+            love & enjoy
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <!-- feature card container -->
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+        </div>
+        <div class="featured-architect">
+          <img src="images/architect.png" alt="" />
+          <button id="experience-badge" class="btn-primary">
+            <span id="experience-year">10+ years</span>
+            <br />
+            <span>Experience</span>
+          </button>
+        </div>
+      </section>
+
       <!-- some facts -->
       <section>
         <h3 class="section-title">Some Facts</h3>
