--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </section>
 
-      <!-- feaures section start -->
+      <!-- features section start -->
       <section class="features display-flex">
         <div>
           <h3 id="feature-section-title" class="section-title">
@@ -154,11 +154,7 @@
           </div>
           <div class="fact-card display-flex">
             <div>
-              <img
-                src="/images/icons/customers.png "
-                alt=""
-                class="fact-icon"
-              />
+              <img src="/images/icons/customers.png" alt="" class="fact-icon" />
               <h4 class="fact-number">590</h4>
               <h5 class="fact-name">Client Worked</h5>
             </div>
